cambio ruta absoluta

--- a/src/componentes/base.njk
+++ b/src/componentes/base.njk
@@ -1,7 +1,7 @@
 
-  
+   {%set prefijo = ""%}
    {%set prefijo = "file:///C:/Users/fresno/Desktop/web/cv/docs"%}
-   {%set prefijo = "/docs"%}
+  
  {# {%set prefijo = "https://andfres.github.io/cv/"%} #}
 
 
