--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -2,11 +2,6 @@
 
     <div class="idiomas">
 
-        {# <a class=" {% if lengua == "en" %}active{% endif %}" href="#">Enghish</a>
-        <a class=" {% if lengua == "es" %}active{% endif %}" href="{{ prefijo }}/es/index.html">Español</a>
-        <a class=" {% if lengua == "it" %}active{% endif %}" href="{{ prefijo }}/index.html">Italiano</a>
-     #}
-
         {% if lengua !== "en" %}
             <a href="#">Enghish</a>
         {% endif %}
@@ -23,9 +18,10 @@
 
 
 
-    {# <div class="yoda" > #}
-        <img class= "yoda" src="{{ prefijo }}/img/yoda.jpg" alt="yoda">
-    {# </div> #}
+     <div class="yoda"> 
+        <p class="mierda">sdf</p>
+        {# <img  src="{{ prefijo }}/img/yoda.jpg" alt="yoda"> #}
+     </div> 
 
     <div class="titulos">
         <h1 class="nombre">Andrés Fresno</h1>
