--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -19,8 +19,8 @@
 
 
      <div class="yoda"> 
-        <p class="mierda">sdf</p>
-        {# <img  src="{{ prefijo }}/img/yoda.jpg" alt="yoda"> #}
+        
+        <img  src="{{ prefijo }}/img/yoda.jpg" alt="yoda">
      </div> 
 
     <div class="titulos">
