--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -3,120 +3,10 @@ $mainfont: arial;
 
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
 
-
-@import 'header.scss';
-@import 'main.scss';
-@import 'skills.scss';
+@import 'page';
+@import 'header';
+@import 'main';
+@import 'skills';
 @import 'cursos';
-@import 'info.scss';
-
-//A4  a  94dpi => 794 x 1123 px
-
-
-
-
-
-
-
-body * {
-    margin: 0;
-    padding: 0;
-    font-family: arial;
-}
-
-.section{
-    padding: 10px;
-  
-    font-family: $mainfont;
-    margin-top: 10px;
-
-    //border: 2px solid red;
-    position: relative;
-    display: inline-block;
-    
-    background-color: white;
-    background-color: rgb(240, 240, 240);
-    //border-radius: 6px;
-   // border: 1px solid grey;
-
-     //box-shadow:   5px 5px 2px grey;
-                    
-                
-
-
-        
-}
-
-
-
-
-
-.linea{
-    display: none;
-    background-color: red;
-    position: absolute;
-    top: 1123px;
-    width: 100% ;
-    height: 5px;
-    left: 0;
-}
-
-.box-container{
-        position: relative;
-        padding-top: 25px;
-        padding-right: 2vw;
-        padding-left: 2vw;
-        background-color: white;
-        box-sizing: border-box;
-        overflow: hidden;
-        
-    
-    
-}
-
-
-@media all and (min-width: 794px) {
-    .box-container{
-        height: 1123px;
-        //border-bottom: 3px solid green;
-        padding-right: 25px;
-        padding-left: 25px;
-    }
-
-}
-
-
-
-
-body {
-
-    margin: auto;
-    align-content: center;
-    background-color: rgb(245, 245, 245);
-    background-color: red;
-    //background-color: yellowgreen;
-    min-width: 300px;
-    max-width: 794px;
-    overflow-x: hidden;
-
-}
-
-
-
-
-.dimension {
-    font-family: $mainfont;
-    font-size: 15px;
-    position: fixed;
-    top: 0;
-    background-color: white;
-    z-index: 999;
-
-}
-
-
-
-
-
-
+@import 'info';
 
