--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -18,9 +18,10 @@
 
 
 
-     <div class="yoda"> 
+     <div class="me"> 
         
-        <img  src="{{ prefijo }}/img/yoda.jpg" alt="yoda">
+        <img  src="{{ prefijo }}/img/yo2.jpg" alt="yoda">
+      
      </div> 
 
     <div class="titulos">
@@ -30,18 +31,18 @@
     
     <div class="links">
         <div class="box_links">
-            <div>
+            <div class="link">
                 <div class="svg"><img src="{{ prefijo }}/img/correo.svg"></div>
                 <p><a href="mailto:javfres@gmail.com">andfres@gmail.com</p>
             </div>
 
-            <div>
+            <div class="link">
                 <div class="svg"><img  src="{{ prefijo }}/img/lugar.svg"></div>
                 <p>San Vito al Tagliamento <br>
                 Pordenone</p>
             </div>
             
-            <div>
+            <div class="link">
                 <div class="svg"><img  src="{{ prefijo }}/img/nacido.svg" alt="{{ nacido }}"></div> 
                 <p>Valladolid, {{ espana }} <br>
                 21-12-1989</p> 
