--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -8,49 +8,55 @@
                 <p class="curso-nombre">Corso creazione Siti Web (240h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Csg.lab - Centro di Formazione Professionale</p>
-                    <p class="curso-fecha">Set 19 - Gen 20</p>
+                    <p class="curso-fecha">Setembre 2019 - Genario 2020</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso di Introduzione allo sviluppo Web (40h)</p>
+                <p class="curso-nombre">Corso Introduzione allo sviluppo Web (40h)</p>
                 <div class="curso-info">
-                    <p class="curso-lugar">Google Áctivate</p>
+                    <p class="curso-lugar">grow with google</p>
                     <p class="curso-fecha">Novembre 2018</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso di bagnino di salvataggio in installazioni acquatiche</p>
+                <p class="curso-nombre">Corso bagnino</p>
                 <div class="curso-info">
-                    <p class="curso-lugar">La Real Federación Española de Salvamento y Socorrismo</p>
+                    <p class="curso-lugar">RFESS</p>
+
+                    {# <p class="curso-lugar">La Real Federación Española de Salvamento y Socorrismo</p> #}
                     <p class="curso-fecha">Novembre 2017</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso di instructore nuoto livelo 1.</p>
+                <p class="curso-nombre">Corso instructore nuoto livelo I.</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Fipsas</p>
-                    <p class="curso-fecha">Novembre 2017</p>
+                    <p class="curso-fecha">Novembre 2019</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso di Creazione di documenti elettronici accessibili</p>
+                <p class="curso-nombre">Corso Creazione documenti elettronici accessibili</p>
                 <div class="curso-info">
                     <p class="curso-lugar">ILUNION / Fundación ONCE</p>
                     <p class="curso-fecha">Marzo 2017</p>
                 </div>
             </div>
+
+{# 
             <div class="curso">
                 <p class="curso-nombre">Corso di prestampa</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Centro di formazione ETAF</p>
                     <p class="curso-fecha">2007</p>
                 </div>
-            </div>
+            </div> #}
+
+
             <div class="curso">
                 <p class="curso-nombre">Educazione Superiore, disegno tecnico e informatica</p>
                 <div class="curso-info">
                     <p class="curso-lugar">I.E.S. Pinar de la Rubia</p>
-                    <p class="curso-fecha">2001-2007</p>
+                    <p class="curso-fecha">2001 - 2005</p>
                 </div>
             </div>
         </div> <!-- fin cursos -->
