--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -44,7 +44,7 @@
                         <p class="fecha">Luglio 2018 - Giugnio 2019</p>
                         <p class="lugar">Prata di Pordenone, Italia</p>
                     </div>
-                    <p class="puesto">OPERAIO in FRIULINTAGLI</p>
+                    <p class="puesto">OPERAIO in FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
                     <div>
                         <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi ha permeso di migiore la lingua Italiana e organizarsi per aggingere i objetivi di prodittivita. </p>
                     </div>
@@ -61,7 +61,7 @@
                         <p class="fecha">Septembre 2019</p>
                         <p class="lugar">San Vito al Tagliamento, Italia</p>
                     </div>
-                    <p class="puesto">Maestro Nuoto (part time) a A.S.D. Pinna-Sub San Vito </p>
+                    <p class="puesto">Maestro Nuoto a A.S.D. Pinna-Sub San Vito <spam class="tag2">Voluntario</spam></p>
                 
                     <p>Istruttore di nuoto da settembre 2019  </p>
                     <p>Creazione ocasionali di volantini</p>
