--- a/docs/css/info.css
+++ b/docs/css/info.css
@@ -1,9 +1,13 @@
 .autorizo {
   padding: 5px;
-  font-size: 14px; }
+  position: absolute;
+  font-size: 14px;
+  bottom: 7px;
+  right: 10px; }
 
 .thiscv {
   padding: 5px;
+  position: static;
   font-size: 14px;
   background-color: white;
   border: 0.8px solid grey;
@@ -15,5 +19,5 @@
 @media all and (min-width: 794px) {
   .thiscv {
     position: absolute;
-    bottom: 30px;
-    right: 20px; } }
+    bottom: 5px;
+    left: 25px; } }
