--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,43 +3,41 @@ header {
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(0, 0, 10, 0.1);
-   
-    
-    //border: 2px solid red;
-    //height: 10px;
-    
-    //align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
+    //border-radius: 20px;
 
 }
-.mierda{
-     border: 2px solid red;
-}
 
-.yoda {
+
+.me {
 
     order: 2;
-    flex-grow: 2;
-    flex-shrink: 3;
+    flex-grow: 1;
+    flex-shrink: 2;
     flex-basis: 160px;
-    
-   // width: 180px;
-
+    //max-width: 250px;
     margin: 0;
     padding: 0;
-    width: auto;
-    border: 2px solid red;
- 
+    //border: 2px solid red;
+    border-radius: 50%;
+    overflow: hidden;
+    box-sizing: content-box;
+    
 
 
 }
 
-.yoda img{
+
+
+.me img{
     width: 100%;
+    //mix-blend-mode: luminosity;
+    display: block;
+    filter: grayscale(100%);
+    //filter: sepia(50%);
+   
+
 }
-
-
-
 
 
 .titulos {
@@ -47,8 +45,9 @@ header {
     width: 100%;
     text-transform: uppercase;
     padding: 0 20px 0 20px;
-    border: 1px solid red;
+    //border: 1px solid red;
     text-align: center;
+    margin-top: 10px;
 
 
     & .nombre {
@@ -69,92 +68,93 @@ header {
         margin-bottom: 20px;
         //border: 2px solid red;
     }
-
 }
 
-//dfasdf
+
 .links {
 
     order: 3;
     flex-grow: 0;
     flex-shrink: 0;
-    //flex-basis: 150px;
-
-
-    position: relative;
-    right: 0;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
     font-size: 13px;
-    
+    margin-top: auto;
+    margin-bottom: auto;
 
+    
 }
 
 
 .box_links {
-    
-    //width: 170px;
     width: 200px;
-    border: 2px solid green;
+    //border: 2px solid green;
 
 }
 
-.box_links div {
-    margin-top: 10px;
+.link {
+    margin-top: 5px;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-
+    //border: 1px solid blue;
+    padding: 0;
 }
-.box_links p{
+
+.link p{
     display: inline-block;
     margin-left: 10px;
-    
+    padding: 0;
+    align-self: center;    
 }
 
-.box_links a{
+.link a{
     text-decoration: inherit;
     color: inherit;
+
 }
 
-.box_links a:hover {
+.links a:hover {
     //text-decoration: inherit;
     color: blue;
 }
 
 
 .svg {
-    width: 20px;
-    height: 20px;
-    //border: 1px solid red;
-    display: inline-block;
-    
+    width: 22px;
+    height: 22px;
+    display: flex;
+    align-content: center;
+    padding: 0;
+    align-self: center;
+    //border: 2px solid red;   
 }
 
 .svg img {
     max-width: 100%;
     max-height: 100%;
     //object-fit: cover;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
-       //border: 1px solid green;
+    //border: 1px solid green;
+    
 }
 
 
 
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 620px) {
     header{
         flex-wrap: nowrap;
         //background-color: yellow;
     }
 
-    .yoda {
+    .me {
         order: 1;
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 180px;
-
     }
 
     .titulos {
