--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,8 +33,8 @@ main {
 
         img{
 
-            width: 60px;
-            height: 60px;
+            width: 100%;
+            //height: 60px;
         }
     }
 
@@ -49,11 +49,10 @@ main {
 .info {
     display: flex;
     justify-content: space-between;
-    flex-wrap: nowrap;
-    //color: blueviolet;
+    flex-wrap: wrap;
+
     border-bottom: 1px solid black;
     margin-top: $margen;
-    //margin-bottom: $margen;
 
     color: $grey_color;
 
@@ -89,7 +88,7 @@ main {
 
 
 
-main p, footer p {
+main p, footer p{
     text-align: justify;
     text-justify: auto;
     overflow-wrap: break-word;
@@ -98,9 +97,19 @@ main p, footer p {
     //color: red;
 }
 
+
+
 .fecha{
-    margin-right: 1em;
+    margin-right: 40px;
+    //border: 2px solid red;
 }
+
+.info p {
+    white-space: nowrap;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
 
 .row1 {
     margin-right: 0;
@@ -120,9 +129,6 @@ main p, footer p {
     margin-bottom: 5px;
 }
 
-.info p{
-    margin: 0;
-}
 
 
 @media screen and (min-width: 700px) {
