--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -4,20 +4,22 @@
     text-align: center;
     margin-top: 1em;
 
-    .tag {
-        //color: white;
-        background-color: grey;
-        //opacity: 0.8;
+}
 
-        font-size: 0.8em;
-        padding: 3px 10px;
+.tag, .tag2{
+    color: white;
+    background-color: grey;
+    font-size: 13px;
+    padding: 3px 10px;
+    border-radius: 4px;
+    display: inline-block;
+}
 
-        margin: 5px 0 5px 5px;
+.tag{
+   margin: 5px;
+}
 
-        margin-right: 5px;
-        border-radius: 4px;
-        display: inline-block;
-    }
-
-
+.tag2 {
+    margin: 0 5px;
+    font-weight: normal;
 }
