--- a/src/index.njk
+++ b/src/index.njk
@@ -24,7 +24,7 @@
 
     
     <div class="thiscv">
-      <small>This resume has been generated using Node.js, HTML5 & SASS, and 11ty/eleventy check it out at: <br>
+      <small>Per fare questo curriculm ho usato HTML5 & SASS, and template engein (nunjucks) <br>
 
           <a href="https://github.com/andfres/cv.git" class="code">
               &gt; git clone https://github.com/andfres/cv.git
