--- a/src/componentes/base.njk
+++ b/src/componentes/base.njk
@@ -1,10 +1,10 @@
-{#  #}
-{#  #}
+
+{# {%set prefijo = "file:///C:/Users/fresno/Desktop/web/cv/docs"%}
+
+{%set prefijo = "https://andfres.github.io/cv"%} #}
+
 {%set prefijo = ""%}
 
-{%set prefijo = "file:///C:/Users/fresno/Desktop/web/cv/docs"%}
-
-{%set prefijo = "https://andfres.github.io/cv"%}
 <!DOCTYPE HTML>
 <html>
 
