--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -38,7 +38,7 @@
 
             <div class="link">
                 <div class="svg"><img  src="{{ prefijo }}/img/lugar.svg"></div>
-                <p>San Vito al Tagliamento <br>
+                <p>San Vito al Tagliamento, <br>
                 Pordenone</p>
             </div>
             
