--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -8,13 +8,13 @@
                 <p class="curso-nombre">Corso creazione Siti Web (240h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Csg.lab - Centro di Formazione Professionale</p>
-                    <p class="curso-fecha">Setembre 2019 - Genario 2020</p>
+                    <p class="curso-fecha">Settembre 2019 - Gennaio 2020</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso Introduzione allo sviluppo Web (40h)</p>
+                <p class="curso-nombre">Corso introduzione allo sviluppo Web (40h)</p>
                 <div class="curso-info">
-                    <p class="curso-lugar">grow with google</p>
+                    <p class="curso-lugar">Grow with google</p>
                     <p class="curso-fecha">Novembre 2018</p>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                 <p class="curso-nombre">Corso instructore nuoto livelo I.</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Fipsas</p>
-                    <p class="curso-fecha">Novembre 2019</p>
+                    <p class="curso-fecha">Novembre 2019 - Gennaio 2020 </p>
                 </div>
             </div>
             <div class="curso">
@@ -51,7 +51,7 @@
                 </div>
             </div> #}
 
-
+            
             <div class="curso">
                 <p class="curso-nombre">Educazione Superiore, disegno tecnico e informatica</p>
                 <div class="curso-info">
