--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -19,16 +19,14 @@
                     <p class="puesto">GRAFICO IMPAGINATORE a ALCAÑIZ FRESNO’S S.A.</p>
                     
                     <div>
-                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette ufficiali e' nella loro edizione
-                            elettronica. Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La
-                            Giunta di Castilla y León.</p>
+                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette  ufficiali e' nella loro edizione
+                            elettronica. <strong>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La
+                            Giunta di Castilla y León.</strong></p>
                             
                         <p>Il mio contributo è stato creare automatismi per InDesign attraverso JavaScript, che permettono di
                             risparmiare molte ore di lavoro.</p>
 
                         <p>creazioni di temi, styli, garanzitar la acesibilidad, estudio de las necesidades per il correto funzionamiento</p>
-
-                        <p>altri lavori al interno de la azienda, Stampa digitale, stampa lastre per macchine offset (CTP), processo completo di rilegatura, amministrazione sito web, magazziniere e consegne.</p>
 
                     </div>
                 </div>
@@ -46,7 +44,7 @@
                     </div>
                     <p class="puesto">OPERAIO in FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
                     <div>
-                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi ha permeso di migiore la lingua Italiana e organizarsi per aggingere i objetivi di prodittivita. </p>
+                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi ha permeso di migiore la lingua Italiana.</p>
                     </div>
                 </div>
                 </article>
@@ -63,7 +61,7 @@
                     </div>
                     <p class="puesto">Maestro Nuoto a A.S.D. Pinna-Sub San Vito <spam class="tag2">Voluntario</spam></p>
                 
-                    <p>Istruttore di nuoto da settembre 2019  </p>
+                    <p>Istruttore di nuoto con persone di diversa eta e  </p>
                     <p>Creazione ocasionali di volantini</p>
                 </div>
             </article>
