--- a/src/index.njk
+++ b/src/index.njk
@@ -24,12 +24,14 @@
 
     
     <div class="thiscv">
-      <small>Per fare questo curriculm ho usato HTML5 & SASS, and template engein (nunjucks) <br>
+      <small>Per la creazione di questo curriculm ho usato: HTML5, SASS e nunjucks come template engine.
+      <spam><br>
+      Puoi vederlo online:
 
-          <a href="https://github.com/andfres/cv.git" class="code">
-              &gt; git clone https://github.com/andfres/cv.git
+          <a href="https://andfres.github.io/cv/" class="code">
+              https://andfres.github.io/cv/
           </a>
-      </small>
+      </spam></small>
     </div>
 
   </div>
