--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -62,19 +62,15 @@ main p, footer p {
   flex-shrink: 0;
   flex-grow: 0; }
 
-.row1 {
+.row1, .row2 {
   margin-right: 0;
   margin-left: 0;
-  padding: 0; }
-
-.row2 {
-  margin: 0;
   padding: 0; }
 
 .main p {
   margin-bottom: 5px; }
 
-@media screen and (min-width: 700px) {
+@media (min-width: 700px) {
   main {
     flex-wrap: nowrap;
     justify-content: flex-start; }
