--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,10 +50,8 @@ main {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
     border-bottom: 1px solid black;
     margin-top: $margen;
-
     color: $grey_color;
 
 }
@@ -66,9 +64,6 @@ main {
     padding-left: -5px;
     //border-bottom: 2px solid black;
     //color: grey;
-    
-
-
 }
 
 .empresa {
@@ -111,18 +106,11 @@ main p, footer p{
 }
 
 
-.row1 {
+.row1, .row2 {
     margin-right: 0;
     margin-left: 0;
     padding: 0;
     //background-color: rgba(200, 0, 100, 0.5);
-}
-
-.row2 {
-    margin: 0;
-    padding: 0;
-    //background-color: rgba(200, 0, 100, 0.5);
-    
 }
 
 .main p {
@@ -131,7 +119,7 @@ main p, footer p{
 
 
 
-@media screen and (min-width: 700px) {
+@media (min-width: 700px) {
 
     main {
         flex-wrap: nowrap;
