--- a/scss/page.scss
+++ b/scss/page.scss
@@ -5,7 +5,7 @@
     margin: 0;
 }
 
-@media print {body {-webkit-print-color-adjust: exact;}}
+
 
 body * {
     margin: 0;
@@ -23,7 +23,7 @@ body {
 
     min-width: 300px;
     max-width: 794px;
-    //overflow-x: hidden;
+
 
 }
 
@@ -35,15 +35,10 @@ body {
     padding-left: 2vw;
     background-color: white;
     box-sizing: border-box;
-    //overflow: hidden;
-    //top: 30px;
-    //bottom: 30px;
     box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.5);
 
 
 }
-
-
 
 
 .section {
@@ -67,7 +62,7 @@ body {
 
 
 
-@media all and (min-width: 794px) {
+@media  (min-width: 794px) {
     .box-container {
         height: 1123px;
         //border-bottom: 3px solid green;
@@ -86,45 +81,10 @@ body {
         position: absolute;
         top: -50px !important;
         font-size: 15px !important;
-    
-        //border: 2px solid red;
 
         & a {
             color: black !important;
         }
     }
-    
-}
-
-
-//////////////////////////////////
-@media print  {
-    html {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    .idiomas{
-        display: none;
-    }
-
-    .box-container {
-        box-shadow: none;
-    }
-    .box-container {
-        margin: 0;
-        height: 1123px;
-
-    }
-    body{
-        width: 794px;
-        height: 1123px;
-    }
-    // header{
-    //     display: block !important;
-    //     background-color: red !important;
-    // }
-    // .me {
-    //     width: 180px !important;
-    // }
 }
 
